--- a/typeidea/typeidea/templates/blog/list.html
+++ b/typeidea/typeidea/templates/blog/list.html
@@ -1,7 +1,7 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8">
     <title>typeidea 博客系统</title>
 </head>
 <body>
@@ -27,4 +27,3 @@
     </ul>
 </body>
 </html>
-
