--- a/typeidea/typeidea/templates/blog/list.html
+++ b/typeidea/typeidea/templates/blog/list.html
@@ -33,7 +33,13 @@
     </ul>
     <div>底部分类
         {% for cate in categories %}
-        <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>>
+        <a href="/category/{{ cate.id }}/">{{ cate.name }}</a>
+        {% endfor %}
+    </div>
+    <div>侧边栏展示:
+        {% for sidebar in sidebars %}
+            <h4>{{ sidebar.title }}</h4>
+            {{ sidebar.content }}
         {% endfor %}
     </div>
 </body>
